@@ -6,6 +6,7 @@
     * Search history is accessible again
     * Display correct status messages when a text search reaches either end of the buffer
     * Url links in :jump list are clickable again
+    * Gracefully handle unescaped regex characters in 'urlseparator' option
 
 2011-11-13:
     * version 3.3
